# local_claude

./: .gitignore  README.md  bonsai_server.cmd  bonsai_server.sh  clean.sh  cli.py  cuda_toolkit_setup.sh  kill-process.sh  openclaude.cmd  openrouter.cmd
.claude/: settings.local.json
bonsai-image/: .gitignore  Dockerfile  README.md  cli.sh
bonsai-image/space/: app.py  dashboard.html  entrypoint.sh  metrics_pusher.py  nginx.conf
caddy-server/: Caddyfile  cli.sh  install.sh
dflash/: DFLASH.md  README.md  dflash.py  pyproject.toml
gemma4_llama.cpp/: install.sh  stop.sh
helicone/: .env.example  README.md  config.yaml  ngrok_proxy.sh  proxy.py  pyproject.toml  start.sh  stop.sh
litellm_proxy/: README.md  config.yaml  ngrok_proxy.sh  pyproject.toml  start.sh  stop.sh
llama-turboquant/: .env.example  cli.sh  embeddinggemma-300m.env  gemma12.sh  gemma4-12b.env  gemma4-dflash.env  install-gemma4.sh  install.sh  lfm8b.env  minicpm5-1b.env  ngrok_proxy.sh  qwen-dflash.env  qwen3.6-27b-mtp.env  qwopus27b-mtp.env  run-gemma4.sh  run-mm.sh  run-qwopus.sh  run.sh  run_multimodal.sh  stop.sh
local-ai/: doc.md  install.sh  test.md
mnn/: install.sh  mnn.sh  run.sh  stop.sh
proxy-gateway/: README.md  env.example  gateway_cli.py  proxy_gateway.py  pyproject.toml
qwen3.5_turboquant_plus/: install.sh  run.sh  stop.sh
searxng/: cli.sh  install.sh
triposplat/: .gitignore  README.md  app.py  cli.sh  example_inputs_b64.py  index.html  requirements.txt
vllm/: cli-27b.sh
