[project]
name = "dflash-server"
version = "0.1.0"
description = "DFlash speculative decoding server wrapper"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "huggingface_hub[cli]>=0.24.0",
    "vllm",
    "transformers>=5.0.0",
]

[project.scripts]
dflash = "dflash:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dflash"]

[tool.uv]
environments = ["sys_platform == 'linux'"]
package = true